--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.1",
     "@fortawesome/free-regular-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/pro-light-svg-icons": "^5.3.1",
     "@fortawesome/vue-fontawesome": "2",
     "core-js": "^3.6.5",
     "element-ui": "^2.4.5",
